--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "watch": "ng build --watch --configuration development",
     "analyze": "webpack-bundle-analyzer dist/primeNG-test/stats.json --host 0.0.0.0 --port 4200",
     "test": "ng test",
-    "generate-icons": "svg-to-ts",
-    "generate-icons-neat": "svg-generator"
+    "generate-icons-2": "svg-to-ts",
+    "generate-icons": "svg-generator"
   },
   "private": true,
   "dependencies": {
@@ -24,15 +24,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-pro": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/pro-duotone-svg-icons": "^5.15.3",
-    "@fortawesome/pro-light-svg-icons": "^5.15.3",
-    "@fortawesome/pro-regular-svg-icons": "^5.15.3",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.3",
     "@ngneat/svg-icon": "^3.2.0",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
@@ -45,6 +37,7 @@
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
+    "@ngneat/svg-generator": "^2.0.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -53,16 +46,16 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5",
-    "@ngneat/svg-generator": "^2.0.0"
+    "svg-to-ts": "^7.0.0",
+    "typescript": "~4.3.5"
   },
   "optionalDependencies": {
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "svgGenerator": {
     "outputPath": "./src/app/svg",
-    "prefix": "app",
-    "srcPath": "./src/assets/svg",
+    "prefix": "fa",
+    "srcPath": "./node_modules/@fortawesome/fontawesome-pro/svgs/regular/*.svg",
     "svgoConfig": {
       "plugins": [
         {
@@ -74,13 +67,17 @@
   },
   "svg-to-ts": {
     "conversionType": "constants",
-    "srcFiles": ["./node_modules/@fortawesome/fontawesome-pro/svgs/regular/*.svg"],
-    "outputDirectory": "./src/app/svg/fontawesome",
+    "srcFiles": [
+      "./node_modules/@fortawesome/fontawesome-pro/svgs/regular/*.svg"
+    ],
+    "outputDirectory": "./src/app/svg",
     "interfaceName": "FontAwesomeIcon",
     "typeName": "fontAwesomeIcon",
     "prefix": "fa",
     "svgoConfig": {
-      "plugins": ["cleanupAttrs"]
+      "plugins": [
+        "cleanupAttrs"
+      ]
     },
     "fileName": "fontawesome-icon.model",
     "compileSources": true
