--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "~4.3.5"
   },
   "optionalDependencies": {
