--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@/*": ["src/*"],
+      "~/*": ["src/*"],
+      "IconLibrary/*": ["src/app/svg/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -29,6 +34,8 @@
     "strictTemplates": true
   },
   "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
     "src/**/*.d.ts",
     "node_modules/primeng/**/*.d.ts"
   ]
