--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: NG Tests
 
 on:
   pull_request:
@@ -25,7 +25,10 @@ jobs:
           path: bulb-ngclient/node_modules
           key: node-modules-${{ hashFiles('bulb-ngclient/package-lock.json') }}
 
-      - run: npm i
+      - name: Install Dependencies
+        run: |
+          npm config set '//npm.fontawesome.com/:_authToken' "${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}"
+          npm i
         if: steps.cache-node-modules.outputs.cache-hit != 'true' && contains(matrix.command, 'npm run test')
 
       - run: npm run test
