--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -23,7 +23,7 @@ jobs:
         id: cache-node-modules
         with:
           path: bulb-ngclient/node_modules
-          key: node-modules-${{ hashFiles('bulb-ngclient/package-lock.json') }}
+          key: node-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Install Dependencies
         run: |
