--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/cache@v2
         id: cache-node-modules
         with:
-          path: bulb-ngclient/node_modules
+          path: node_modules
           key: node-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Install Dependencies
