--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -29,5 +29,6 @@ jobs:
         run: |
           npm config set '//npm.fontawesome.com/:_authToken' "${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}"
           npm i
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
 
       - run: npm run test
