--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -10,10 +10,11 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [v16]
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
