--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npm config set '//npm.fontawesome.com/:_authToken' "${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}"
           npm i
+        env: FONTAWESOME_NPM_AUTH_TOKEN=${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
 
       - run: npm run test
