--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Install Dependencies
         run: |
           npm i
-        env: FONTAWESOME_NPM_AUTH_TOKEN=${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+        env: 
+          FONTAWESOME_NPM_AUTH_TOKEN=${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
 
       - run: npm run test
