fix tests, update env config (#1)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# configuration
+.env
+
 # compiled output
 /dist
 /tmp
@@ -43,7 +46,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-.npmrc
 
 # Generated files from svg-to-ts
 src/app/svg/**/*.ts
