--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
-    "@ngneat/svg-generator": "^2.0.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
+    "@ngneat/svg-generator": "^3.2.1",
+    "@types/jasmine": "~3.10.1",
+    "@types/node": "^16.11.6",
+    "jasmine-core": "~3.10.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "~4.3.5"
   },
