--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     env:
       FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
@@ -31,7 +31,37 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npm i
+          npm i --no-optional
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
 
       - run: npm run test
+
+  lint:
+    runs-on: ubuntu-latest
+    env:
+      FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+
+    strategy:
+      matrix:
+        node-version: [v16]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - uses: actions/cache@v2
+        id: cache-node-modules
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+
+      - name: Install Dependencies
+        run: |
+          npm i --no-optional
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+
+      - run: npm run lint
