--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:stats": "ng build --stats-json",
     "watch": "ng build --watch --configuration development",
     "analyze": "webpack-bundle-analyzer dist/primeNG-test/stats.json --host 0.0.0.0 --port 4200",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -34,11 +35,19 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^12.1.3",
     "@angular-devkit/build-angular": "~12.2.8",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
     "@ngneat/svg-generator": "^3.2.1",
     "@types/jasmine": "~3.10.1",
     "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.10.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
