--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "eslint": "^7.26.0",
     "jasmine-core": "~3.10.1",
     "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ts-node": "^10.2.1",
