--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "jasmine-core": "~3.10.1",
     "karma": "~6.3.0",
     "karma-coverage": "~2.0.3",
