--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ts-node": "^10.2.1",
+    "ts-node": "10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "~4.3.5"
   },
