--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -36,6 +36,15 @@ jobs:
 
       - run: npm run test
 
+      - uses: codecov/codecov-action@v3
+        with:
+          # token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./coverage1.xml,./coverage2.xml # optional
+          flags: unittests # optional
+          name: codecov-umbrella # optional
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
+
   lint:
     runs-on: ubuntu-latest
     env:
