--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -34,12 +34,11 @@ jobs:
           npm i --no-optional
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
 
-      - run: npm run test
+      - run: npm run test -- --code-coverage
 
       - uses: codecov/codecov-action@v3
         with:
-          # token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          files: ./coverage1.xml,./coverage2.xml # optional
+          directory: ./coverage
           flags: unittests # optional
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
