--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -44,6 +44,14 @@ jobs:
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)
 
+      - name: Coveralls GitHub Action
+        # You may pin to the exact commit or the version.
+        # uses: coverallsapp/github-action@9ba913c152ae4be1327bfb9085dc806cedb44057
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+  
+
   lint:
     runs-on: ubuntu-latest
     env:
