--- a/.github/workflows/ng-test.yml
+++ b/.github/workflows/ng-test.yml
@@ -50,7 +50,8 @@ jobs:
         uses: coverallsapp/github-action@1.1.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-  
+          path-to-lcov: ./coverage/primeNG-test/lcov.info
+
 
   lint:
     runs-on: ubuntu-latest
